--- a/style.css
+++ b/style.css
@@ -78,3 +78,44 @@ footer{
     padding: 15px;
     margin-top: 20px;
 }
+
+/* Cardápio
+
+.menu{
+    padding: 20px;
+    text-align: center;
+}
+
+.menu h1{
+    margin-bottom: 20px;
+    color: #b22222
+}
+
+.menu-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+}
+
+.menu-item{
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    padding: 15px;
+}
+
+.menu-item img {
+    max-width: 100%;
+    border-radius: 8px;
+}
+
+.menu-item h2 {
+    margin: 10px 0;
+}
+
+.price {
+    display: inline-block;
+    margin-top: 10px;
+    font-weight: bold;
+    color: #8b0000;
+}
