--- a/style.css
+++ b/style.css
@@ -1,13 +1,35 @@
+@media (max-width: 768px) {
+    main {
+        padding: 15px;
+    }
+    footer {
+        font-size: 14px;
+    }
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+main > *:last-child {
+    margin-bottom: 0;
+}
+
 body{
+    margin: 0;
+    padding: 0;
     font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: rgba(245, 245, 245, 0.542);
+    background: url(assets/imagens/pizza2.jpg);
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; 
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
 
 header{
@@ -42,7 +64,7 @@ header{
 
 
 .hero{
-    background:url(assets/imagens/pizza1.jpg) center/cover no-repeat;
+    background:url(assets/imagens/fundo.jpg) center/cover no-repeat;
     height: 90vh;
     display: flex;
     align-items: center;
@@ -71,16 +93,6 @@ header{
 .btn:hover{
     background: #555;
 }
-
-footer{
-    background: #333;
-    color: white;
-    text-align: center;
-    padding: 15px;
-    margin-top: 20px;
-}
-
-
 
 .menu {
     padding: 20px;
@@ -124,6 +136,7 @@ footer{
 .sobre {
     padding: 20px;
     text-align: center;
+    color: white;
 }
 
 .sobre-content {
@@ -139,13 +152,14 @@ footer{
 
 .sobre-content p {
     font-size: 1.1rem;
-    color: #333;
+    color: #fffdfd;
 }
 
 
 .contato {
     padding: 20px;
     text-align: center;
+    color: #f8f8f8;
 }
 
 .contato-info {
@@ -159,10 +173,22 @@ footer{
 #fundo{
     background:url(assets/imagens/pizza1.jpg) center/cover no-repeat;
     height: 90vh;
-    margin-bottom:0px;
+    margin-bottom: 20px;
 }
 
 iframe {
     border-radius: 8px;
     margin-top: 20px;
+}
+
+footer {
+    background: #333;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    margin-top: 0;
+}
+
+main > *:last-child {
+    margin-bottom: 0; /* evita espaço no final do conteúdo */
 }
